--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/mysql": "^2.15.26",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.2",
@@ -24,8 +26,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.6.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/knex": "^0.16.1",
     "@types/node": "^20.14.10",
     "eslint": "^9.6.0",
